--- a/index.html
+++ b/index.html
@@ -5092,34 +5092,47 @@ function showSlides(n) {
     <h2> 1. Disabilities And Inclusion</h2> 
     <p> 
         <br>
-        <b style="font-size: 11.2px; font-family: 'helvetica'; color:rgb(0, 140, 255);">Inclusion is the act of including someone or something as part of a group, list, etc., or a person or thing that is included.
+        <b style="font-size: 13px; font-family: 'Kanit'; color:rgb(0, 140, 255);">Inclusion is the act of including someone or something as part of a group, list, etc., or a person or thing that is included 
             <br>Examples:<br>
             <em>1. She is being considered for inclusion in the Olympic team.
             <br>
             2. Inclusion of The book's value stems from its inclusion of multiple viewpoints.
             <br>
-            3. Two last-minute inclusions are Jim and Ahmed.
+            3. Two last-minute inclusions are Jim and Ahmed according to the website of
+            <a href=" https://dictionary.cambridge.org/fr/dictionnaire/anglais/inclusion " target="_blank">Cambridge Dictionary</a>. But according to the website of <a href="https://www.merriam-webster.com/dictionary/inclusion" target="_blank">Merriam-Webster</a>  inclusion is the act of including : the state of being included
+            2
+            : something that is included: such as
+            a
+            : a gaseous, liquid, or solid foreign body enclosed in a mass (as of a mineral)
+            b
+            : a passive usually temporary product of cell activity (such as a starch grain) within the cytoplasm or nucleus
             </em>
         </b>
         <br>
--------------------------------------------------------------------------
-        <br>
+------------------------------------------------------------------------
+<br>
+<b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">1-A. Observations</b>    
+<br>
         One of the most simplistic instrument to measure the level of INCLUSION in an area is first to favor a way of observing how things are happening there in terms of social interactions between people. How are interactions seeming like ? Good ? Bad ? Mini ? What are the reasons ? Why and how interactions and conversations between people with communications, helping and supporting each other matters ? How vulnerable people like elders, people with difference are treated ? Do and how non-disabled people interact with disabled people in communities ? In person ? By postal or virtual way like cellphones, internet or other ways ? 
         <br>
+        <b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">2-B. Collecting informations</b>
         <br>
         Collecting these informations and get them compilated through a deep and rational analyse in order to stick a general view about INCLUSION in the chosen community. Probably the answers will emphasize an idea and gives an index to more learn and understand about how inclusion is dealt in the area. But something is clear, for any living community, the existence of connections with comnunications between people, supporting each-other-spirit, is a huge vector to get the community vibrant and to moving ahead in solidarity and cohesion. So there maybe a set of social rules to define how communities are organised to get governed. Leaders of communities have to work hard to keep the commnunity safe in its entirety.
         <br>
+        <b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">3-C. Communities, their members and their families matter</b>
         <br>
         Many members whant to build a family and raise children then having a good life and social interactions. They should respect their communities rules. At the same time talking to each other, giving respect to neighbours, being in solidarity with each other or especially those in need, behaving as social normal rules do recommand, is really imperative and worthy for harmony in the communities. Also interacting and/or helping people in need no matter their cultural or physical difference is a great human value and inclusive because every human-being matters. It is how things should work in every community. It is a way to continue to building a strong and inclusive community. The exercise of observation can be easier ou difficult but is reachable by anyone even it may take a time to come to a conclusion. 
         The fact to be able to observe, idealize and summurize some causes of exclusion or inclusion is important. 
         
         <br>
+        <b style="font-family: 'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">4-D. A volunteering And Ojective Mindset Of A Good Observer</b>
         <br>
         It's also a good beginning to get familiar to local inclusion trend but no everyone can do it without a volunteering and objective mind. A good observer should make a special analysis about conversations between non-disabled and disabled people because it uses to be unfamiliar. It is some kind of interactions between people of difference and the rest of the society that will more highlight the level of Inclusion in the community. What constant and consistent those interactions are ? Can they impact positively the processus of inclusion for disabled people ? How disability is generally perceived in African countries especially in Burkina Faso, Niger or Mali all of them in the Sahel region of West Africa ?
         <br>
        
  It's obvious the existence of a little difference of development between the cited countries, the matters and issues tied to disabled people are approximatelly the same in Africa in terms of how people are living better or not with their disabilities. What are the feelings of disabled people about their rights? 
  <br>
+ <b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">5-E. The Main Focus Is To Dig Into Existential Specter Of Discriminations And Exclusion</b>
  <br>
  The main focus is to dig deep into many subjects and concerns and getting tools to understand why there is a continual and discriminative specter of wrongdoing towards people with difference. What matters is the possibility of having more people to make substancial approaches and ideas of what it means disability and how disabled people are dealing with it on a daily basis. 
  <br>
