--- a/index.html
+++ b/index.html
@@ -4849,7 +4849,7 @@ function showSlides(n) {
                 <p><b><em style="font-family: 'Kanit'; color: rgb(214, 41, 18);">Burkina Faso</em>, the land of integrity, a landlocked and low-income Sub-Saharan African country with limited natural resources, is administratively structured of <em style="font-family: 'Kanit'; color:green">45 provinces </em>and nested within <em style="font-family: 'Kanit'; color:rgb(214, 41, 18)">West Africa</em>. Burkina Faso was a former colony of France from which it gained (took) independence in August 5th, 1960. 
                     <em style="font-family: 'Kanit'; color: rgb(214, 41, 18)">Its capital and main city is Ouagadougou</em> which population is heightened about 1.086.505 people in the city area. The global <em style="font-family: 'Kanit'; color:green;"> population of Burkina Faso is approximatively equal to 23 300 000 inhabitants</em> with a dominant percentage of youth. Geography influences Economy. The economy of Burkina Faso is mostly based on
                 agriculture, livestock breeding, mining, market gardening. The informal
-                sector is growing and believed to create more jobs. Citizens of Burkina Faso are called Burkinabè or Burkinabé but without a plural mark as 'S'. These are by an aphabetical order the 45 provinces of Burkina Faso:
+                sector is growing and believed to create more jobs. Citizens of Burkina Faso are called Burkinabè or Burkinabé but without a plural mark as 'S'. These are by aphabetical order the 45 provinces:
                 </b>    
             </p>            
             </div>
