--- a/index.html
+++ b/index.html
@@ -2721,7 +2721,7 @@ height: auto;
     text-align: left;
     width: 85.5%;
     height: auto;
-    margin-top: 0.5rem;
+    margin-top: 6rem;
     box-shadow: 0 0.3px 0.17rem 0.2px rgba(28, 127, 197, 0.986)
 }
 .Burki-pics1{
@@ -5063,7 +5063,7 @@ function showSlides(n) {
 
 <div class="Burki-PiK">
 
-    <div class="Burki-pics0" style="margin-top: 3rem;">
+    <div class="Burki-pics0">
 
         <div class="Bu-pics">
 
@@ -5099,14 +5099,18 @@ function showSlides(n) {
             2. Inclusion of The book's value stems from its inclusion of multiple viewpoints.
             <br>
             3. Two last-minute inclusions are Jim and Ahmed according to the website of
-            <a href=" https://dictionary.cambridge.org/fr/dictionnaire/anglais/inclusion " target="_blank">Cambridge Dictionary</a>. But according to the website of <a href="https://www.merriam-webster.com/dictionary/inclusion" target="_blank">Merriam-Webster</a>  inclusion is the act of including : the state of being included
+            <a href=" https://dictionary.cambridge.org/fr/dictionnaire/anglais/inclusion " target="_blank">Cambridge Dictionary.</a> 
+            <br>
+            According to the website of <a href="https://www.merriam-webster.com/dictionary/inclusion" target="_blank">Merriam-Webster</a>  inclusion is the act of including : the state of being included
             2
             : something that is included: such as
             a
             : a gaseous, liquid, or solid foreign body enclosed in a mass (as of a mineral)
             b
-            : a passive usually temporary product of cell activity (such as a starch grain) within the cytoplasm or nucleus
+            : a passive usually temporary product of cell activity (such as a starch grain) within the cytoplasm or nucleus.
             </em>
+            <br> 
+            But how can we recognize an inclusive environment ? Basically through some points below:
         </b>
         <br>
 ------------------------------------------------------------------------
