--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         .top-container {
             display: flex;
             position: relative;
-            background-color: rgb(233, 233, 233);
+            background: rgb(177, 211, 243);
             width: 100%;
             height: 80px;
             justify-content: center;
@@ -1031,7 +1031,7 @@
             position: relative;
             width: 20%;
             height: 79px;
-            background-color: rgb(233, 233, 233);
+            background: rgb(177, 211, 243);
             justify-content: center;
             align-items: center;
             margin-left: -1.31%; 
@@ -1042,7 +1042,7 @@
             position: relative;
             width: 79.6%;
             height: 79px;
-            background-color: rgb(233, 233, 233);
+            background: rgb(177, 211, 243);
             justify-content: center;
             align-items: center;
             margin-left: 7%; 
@@ -1054,7 +1054,7 @@
             flex-direction: column;
             width: 100%;
             height: auto;
-            background-color: rgba(222, 222, 222, 0.538);
+            background: rgba(66, 145, 219, 0.458);
             justify-content: center;
             align-items: center;
         }
@@ -2703,7 +2703,7 @@ height: auto;
     width: 100%;
     height: auto;
     padding: 10px;
-    background: rgba(66, 145, 219, 0.63);
+    background: rgba(66, 145, 219, 0.355);
     margin-top: 3rem;
     margin-bottom: 1.5rem;
 }
