--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
             flex-direction: column;
             width: 100%;
             height: auto;
-            background: rgba(66, 145, 219, 0.458);
+            background: rgb(177, 211, 243);
             justify-content: center;
             align-items: center;
         }
@@ -3112,7 +3112,7 @@ cursor: pointer;
         }
 
         .content4y img:hover {
-            transform: scale(1.1);
+            transform: scale(1.02);
         }
 
         .contentyy2 {
@@ -3870,10 +3870,10 @@ background: #717171;
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            background: rgb(189, 188, 188); 
+            background: #fff; 
             font-family: 'Kanit'; 
             font-size: 22px; 
-            color: #505050; 
+            color: #000; 
             width: 180px; 
             height: 50px;
             padding: 10px;
@@ -3889,9 +3889,9 @@ background: #717171;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background: rgb(125, 125, 125); 
+        background: #000; 
         transition: 0.2s linear;
-        color: #000;
+        color: #fff;
     }
         .Promotion{
             display: grid;
@@ -5092,23 +5092,28 @@ function showSlides(n) {
     <h2> 1. Disabilities And Inclusion</h2> 
     <p> 
         <br>
-        <b style="font-size: 13px; font-family: 'Kanit'; color:rgb(0, 140, 255);">Inclusion is the act of including someone or something as part of a group, list, etc., or a person or thing that is included 
+        <b style="font-size: 13px; font-family: 'Kanit'; color:rgb(0, 140, 255);">A. According to the website of
+            <a href=" https://dictionary.cambridge.org/fr/dictionnaire/anglais/inclusion " target="_blank">Cambridge Dictionary</a>, inclusion is the act of including someone or something as part of a group, list, etc. [A person or thing that is included] 
             <br>Examples:<br>
             <em>1. She is being considered for inclusion in the Olympic team.
             <br>
             2. Inclusion of The book's value stems from its inclusion of multiple viewpoints.
             <br>
-            3. Two last-minute inclusions are Jim and Ahmed according to the website of
-            <a href=" https://dictionary.cambridge.org/fr/dictionnaire/anglais/inclusion " target="_blank">Cambridge Dictionary.</a> 
+            3. Two last-minute inclusions are Jim and Ahmed 
             <br>
-            According to the website of <a href="https://www.merriam-webster.com/dictionary/inclusion" target="_blank">Merriam-Webster</a>  inclusion is the act of including : the state of being included
+             <br>
+            B. According to the website of <a href="https://www.merriam-webster.com/dictionary/inclusion" target="_blank">Merriam-Webster</a>  inclusion is the act of including : the state of being included
             2
             : something that is included: such as
             a
             : a gaseous, liquid, or solid foreign body enclosed in a mass (as of a mineral)
             b
             : a passive usually temporary product of cell activity (such as a starch grain) within the cytoplasm or nucleus.
-            </em>
+        <br>
+        <br>
+            C. According to the <a href="https://languages.oup.com/" target="_blank"> Oxford Languages</a>, inclusion is the practice or policy of providing equal access to opportunities and resources for people who might otherwise be excluded or marginalized, such as those who have physical or intellectual disabilities and members of other minority groups.    
+        
+        </em>
             <br> 
             But how can we recognize an inclusive environment ? Basically through some points below:
         </b>
