--- a/index.html
+++ b/index.html
@@ -5119,15 +5119,15 @@ function showSlides(n) {
             But how can we recognize an inclusive environment ? Basically through some points below:
         </b>
         <br>
-------------------------------------------------------------------------
+        <hr style="color: #858585">
 <br>
 <b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">1-A. Observations</b>    
 <br>
-        One of the most simplistic instrument to measure the level of INCLUSION in an area is first to favor a way of observing how things are happening there in terms of social interactions between people. How are interactions seeming like ? Good ? Bad ? Mini ? What are the reasons ? Why and how interactions and conversations between people with communications, helping and supporting each other matters ? How vulnerable people like elders, people with difference are treated ? Do and how non-disabled people interact with disabled people in communities ? In person ? By postal or virtual way like cellphones, internet or other ways ? 
+        One of the most simplistic instrument to measure the level of INCLUSION in an area is first to favor a way of observing how things are happening there in terms of social interactions between people during a while of time. What kind of interaction is between communities members ? Good ? Bad ? Mini ? What are the reasons ? Why and how interactions and conversations between people with communications, helping and supporting each other matters ? How vulnerable people like elders, people with difference are treated ? Do and how non-disabled people interact with disabled people in communities ? In person ? By postal or virtual way like cellphones, internet or other ways ? 
         <br>
-        <b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">2-B. Collecting informations</b>
+        <b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">2-B. Questions and answers can lead to substancial informations about inclusion</b>
         <br>
-        Collecting these informations and get them compilated through a deep and rational analyse in order to stick a general view about INCLUSION in the chosen community. Probably the answers will emphasize an idea and gives an index to more learn and understand about how inclusion is dealt in the area. But something is clear, for any living community, the existence of connections with comnunications between people, supporting each-other-spirit, is a huge vector to get the community vibrant and to moving ahead in solidarity and cohesion. So there maybe a set of social rules to define how communities are organised to get governed. Leaders of communities have to work hard to keep the commnunity safe in its entirety.
+        Gathering answers from questions and then compilated them deeply and rationally through analyses in order to stick up a general view about INCLUSION in the chosen community. Probably the answers will emphasize an idea and gives an index to more learn and understand about how inclusion is dealt in the area. But something is clear, for any living community, the existence of connections with comnunications between people, supporting each-other-spirit, is a huge vector to get the community vibrant and to moving ahead in solidarity and cohesion. So there maybe a set of social rules to define how communities are organised to get governed. Leaders of communities have to work hard to keep the commnunity safe in its entirety.
         <br>
         <b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">3-C. Communities, their members and their families matter</b>
         <br>
@@ -5154,7 +5154,7 @@ function showSlides(n) {
     <div style="font-family: 'helvetica'; font-size: 12px; margin-top: -0.35rem;">
         <h4>Inclusion in Africa</h4>
     </div>
-<a href="https://www.hi-us.org/en/country/burkina-faso" target="_blank">
+<a href="https://education-profiles.org/sub-saharan-africa/burkina-faso/~inclusion" target="_blank">
     <div class="country">
    1. In Burkina Faso
     </div>
