--- a/index.html
+++ b/index.html
@@ -5092,41 +5092,35 @@ function showSlides(n) {
     <h2> 1. Disabilities And Inclusion</h2> 
     <p> 
         <br>
-        <b style="font-size: 13px; font-family: 'Kanit'; color:rgb(0, 140, 255);">A. According to the website of
+        <p style="font-size: 12px; font-family: 'verdana'; color:rgb(0, 140, 255); line-height: 16px;">
+             A. [Definition] According to the <a href="https://languages.oup.com/" target="_blank"> Oxford Languages</a>, inclusion is the practice or policy of providing equal access to opportunities and resources for people who might otherwise be excluded or marginalized, such as those who have physical or intellectual disabilities and members of other minority groups.    
+                <br>
+                <br>
+        B. [Definition] According to the website of
             <a href=" https://dictionary.cambridge.org/fr/dictionnaire/anglais/inclusion " target="_blank">Cambridge Dictionary</a>, inclusion is the act of including someone or something as part of a group, list, etc. [A person or thing that is included] 
             <br>Examples:<br>
-            <em>1. She is being considered for inclusion in the Olympic team.
+            1. She is being considered for inclusion in the Olympic team.
             <br>
             2. Inclusion of The book's value stems from its inclusion of multiple viewpoints.
             <br>
             3. Two last-minute inclusions are Jim and Ahmed 
             <br>
              <br>
-            B. According to the website of <a href="https://www.merriam-webster.com/dictionary/inclusion" target="_blank">Merriam-Webster</a>  inclusion is the act of including : the state of being included
-            2
-            : something that is included: such as
-            a
-            : a gaseous, liquid, or solid foreign body enclosed in a mass (as of a mineral)
-            b
-            : a passive usually temporary product of cell activity (such as a starch grain) within the cytoplasm or nucleus.
+            C. [Definition] According to the website of <a href="https://www.merriam-webster.com/dictionary/inclusion" target="_blank">Merriam-Webster</a>  inclusion is the act of including, the state of being included
+             - Something that is included: such as a gaseous, liquid, or solid foreign body enclosed in a mass (as of a mineral), passive usually temporary product of cell activity (such as a starch grain) within the cytoplasm or nucleus.
         <br>
-        <br>
-            C. According to the <a href="https://languages.oup.com/" target="_blank"> Oxford Languages</a>, inclusion is the practice or policy of providing equal access to opportunities and resources for people who might otherwise be excluded or marginalized, such as those who have physical or intellectual disabilities and members of other minority groups.    
-        
-        </em>
-            <br> 
             <br> 
             But how can we recognize an inclusive environment ? Basically through some points below:
         </b>
         <br>
         <hr style="color: #858585">
-<b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">1-A. Observations</b>    
+<b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">1-A. Observations and Questions</b>    
 <br>
-        One of the most simplistic instrument to measure the level of INCLUSION in an area is first to favor a way of observing how things are happening there in terms of social interactions between people during a while of time. What kind of interaction is between communities members ? Good ? Bad ? Mini ? What are the reasons ? Why and how interactions and conversations between people with communications, helping and supporting each other matters ? How vulnerable people like elders, people with difference are treated ? Do and how non-disabled people interact with disabled people in communities ? In person ? By postal or virtual way like cellphones, internet or other ways ? 
+        One of the most simplistic instrument to measure the level of INCLUSION in an area is to observe and then question about how things are happening there in terms of social connections and interactions between people in a chosen area. What kind of interaction is there between people in the community ? Good ? Bad ? Mini ? What are the reasons ? Why and how interactions and communications can be leverages to learn about inclusiness ? How vulnerable people like elders, people with difference are treated ? Do and how non-disabled people interact with disabled people in communities ? In person ? By postal or virtual way like cellphones, internet or other ways ? 
         <br>
-        <b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">2-B. Questions and answers can lead to substancial informations about inclusion</b>
+        <b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">2-B. Answers can lead to substancial informations about inclusion</b>
         <br>
-        Gathering answers from questions and then compilated them deeply and rationally through analyses in order to stick up a general view about INCLUSION in the chosen community. Probably the answers will emphasize an idea and gives an index to more learn and understand about how inclusion is dealt in the area. But something is clear, for any living community, the existence of connections with comnunications between people, supporting each-other-spirit, is a huge vector to get the community vibrant and to moving ahead in solidarity and cohesion. So there maybe a set of social rules to define how communities are organised to get governed. Leaders of communities have to work hard to keep the commnunity safe in its entirety.
+        Gathering answers from questions and then compilate them deeply and rationally through analyses in order to stick up a general view about INCLUSION in the chosen community. Probably the answers will emphasize an idea and gives an index to more learn and understand about how inclusion is dealt in the area. But something is clear, for any living community, the existence of connections with comnunications between people, supporting each-other-spirit, is a huge vector to get the community vibrant and to moving ahead in solidarity and cohesion. So there maybe a set of social rules to define how communities are organised to get governed. Leaders of communities have to work hard to keep the commnunity safe in its entirety.
         <br>
         <b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">3-C. Communities, their members and their families matter</b>
         <br>
@@ -5141,7 +5135,7 @@ function showSlides(n) {
        
  It's obvious the existence of a little difference of development between the cited countries, the matters and issues tied to disabled people are approximatelly the same in Africa in terms of how people are living better or not with their disabilities. What are the feelings of disabled people about their rights? 
  <br>
- <b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">5-E. The Main Focus Is To Dig Into Existential Specter Of Discriminations And Exclusion</b>
+5-E. The Main Focus Is To Dig Into Existential Specter Of Discriminations And Exclusion</b>
  <br>
  The main focus is to dig deep into many subjects and concerns and getting tools to understand why there is a continual and discriminative specter of wrongdoing towards people with difference. What matters is the possibility of having more people to make substancial approaches and ideas of what it means disability and how disabled people are dealing with it on a daily basis. 
  <br>
