--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         .top-container {
             display: flex;
             position: relative;
-            background: rgba(189, 204, 255, 0.985);
+            background: rgb(189, 204, 255);
             width: 100%;
             height: 80px;
             justify-content: center;
@@ -1031,7 +1031,7 @@
             position: relative;
             width: 20%;
             height: 79px;
-            background: rgba(189, 204, 255, 0.985);
+            background: rgb(189, 204, 255);
             justify-content: center;
             align-items: center;
             margin-left: -1.31%; 
@@ -1042,7 +1042,7 @@
             position: relative;
             width: 79.6%;
             height: 79px;
-            background: rgba(189, 204, 255, 0.985);
+            background: rgba(189, 204, 255);
             justify-content: center;
             align-items: center;
             margin-left: 7%; 
