--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 
@@ -2253,7 +2252,7 @@ height: auto;
             padding: 20px;
             justify-content: center;
             justify-items: center;
-            background: rgba(232, 231, 231, 0.458);
+            background: rgba(233, 232, 232, 0.458);
             box-shadow: 0 1px 0.15rem 0 rgb(40, 155, 236);
         }
 
@@ -2721,7 +2720,7 @@ height: auto;
     text-align: left;
     width: 85.5%;
     height: auto;
-    margin-top: 6rem;
+    margin-top: 3rem;
     box-shadow: 0 0.3px 0.17rem 0.2px rgba(28, 127, 197, 0.986)
 }
 .Burki-pics1{
@@ -5092,7 +5091,7 @@ function showSlides(n) {
     <h2> 1. Disabilities And Inclusion</h2> 
     <p> 
         <br>
-        <p style="font-size: 12px; font-family: 'verdana'; color:rgb(0, 140, 255); line-height: 16px;">
+        <p style="font-size: 12px; font-family: 'helvetica'; color:rgb(0, 140, 255); line-height: 16px;">
              A. [Definition] According to the <a href="https://languages.oup.com/" target="_blank"> Oxford Languages</a>, inclusion is the practice or policy of providing equal access to opportunities and resources for people who might otherwise be excluded or marginalized, such as those who have physical or intellectual disabilities and members of other minority groups.    
                 <br>
                 <br>
@@ -6586,3 +6585,4 @@ function showSlides(n) {
 </body>
 
 </html>
+
