--- a/index.html
+++ b/index.html
@@ -5134,7 +5134,7 @@ function showSlides(n) {
        
  It's obvious the existence of a little difference of development between the cited countries, the matters and issues tied to disabled people are approximatelly the same in Africa in terms of how people are living better or not with their disabilities. What are the feelings of disabled people about their rights? 
  <br>
-5-E. The Main Focus Is To Dig Into Existential Specter Of Discriminations And Exclusion</b>
+ <b style="font-family: 'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">5-E. The Main Focus Is To Dig Into Existential Specter Of Discriminations And Exclusion</b>
  <br>
  The main focus is to dig deep into many subjects and concerns and getting tools to understand why there is a continual and discriminative specter of wrongdoing towards people with difference. What matters is the possibility of having more people to make substancial approaches and ideas of what it means disability and how disabled people are dealing with it on a daily basis. 
  <br>
@@ -6585,5 +6585,6 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
