--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         .top-container {
             display: flex;
             position: relative;
-            background: rgb(192, 204, 253);
+            background: rgb(107, 155, 244);
             width: 100%;
-            height: 80px;
+            height: 78px;
             justify-content: center;
             align-items: center;
             background-position: cover;
@@ -123,9 +123,9 @@
 
         .navbar:hover .Photography:hover .dropbtn {
             transition: 0.35s ease;
-            color: red;
+            color: yellow;
             cursor: pointer;
-            background: #fff;
+            background: rgb(107, 155, 244);
         }
 
  .Photography-content {
@@ -196,9 +196,9 @@
 
         .navbar:hover .Sport:hover .dropbtn {
             transition: 0.35s ease;
-            color: red;
+            color: yellow;
             cursor: pointer;
-            background: #fff;
+            background: rgb(107, 155, 244);
         }
 
         .Sport-content {
@@ -270,10 +270,10 @@
 
         .navbar:hover .Education:hover .dropbtn {
             transition: 0.35s ease;
-            color: red;
+            color: yellow;
             cursor: pointer;
-            background: #fff;
-        }
+            background: rgb(107, 155, 244);
+                }
 
         .Education-content {
   display: none;
@@ -344,9 +344,9 @@
 
         .navbar:hover .Promoter:hover .dropbtn {
             transition: 0.35s ease;
-            color: red;
+            color: yellow;
             cursor: pointer;
-            background: #fff;
+            background: rgb(107, 155, 244);
         }
 
         .Promoter-content {
@@ -418,9 +418,9 @@
 
         .navbar:hover .Contact:hover .dropbtn {
             transition: 0.35s ease;
-            color: red;
+            color: yellow;
             cursor: pointer;
-            background: #fff;
+            background: rgb(107, 155, 244);
         }
 
         .Contact-content {
@@ -493,9 +493,9 @@
 
         .navbar:hover .Community:hover .dropbtn {
             transition: 0.35s ease;
-            color: red;
+            color: yellow;
             cursor: pointer;
-            background: #fff;
+            background: rgb(107, 155, 244);
         }
 
         .Community-content {
@@ -568,9 +568,9 @@
 
         .navbar:hover .TikiYiki:hover .dropbtn {
             transition: 0.35s ease;
-            color: red;
+            color: yellow;
             cursor: pointer;
-            background: #fff;
+            background: rgb(107, 155, 244);
         }
 
         .TikiYiki-content {
@@ -643,9 +643,9 @@
 
         .navbar:hover .Disability:hover .dropbtn {
             transition: 0.35s ease;
-            color: red;
+            color: yellow;
             cursor: pointer;
-            background: #fff;
+            background: rgb(107, 155, 244);
         }
 
         .Disability-content {
@@ -1030,7 +1030,7 @@
             position: relative;
             width: 20%;
             height: 79px;
-            background: rgb(192, 204, 253);
+            background: rgb(107, 155, 244);
             justify-content: center;
             align-items: center;
             margin-left: -1.31%; 
@@ -1039,12 +1039,12 @@
         .cover1 {
             display: flex;
             position: relative;
-            width: 79.6%;
+            width: 80%;
             height: 79px;
-            background: rgb(192, 204, 253);
+            background: rgb(107, 155, 244);
             justify-content: center;
             align-items: center;
-            margin-left: 7%; 
+            margin-left: 7.5%; 
         }
 
         .fwrapper {
@@ -5115,7 +5115,7 @@ function showSlides(n) {
         <hr style="color: #858585">
 <b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">1-A. Observations and Questions</b>    
 <br>
-        One of the most simplistic instrument to measure the level of INCLUSION in an area is to observe and then question about how things are happening there in terms of social connections and interactions between people in a chosen area. What kind of interaction is there between people in the community ? Good ? Bad ? Mini ? What are the reasons ? Why and how interactions and communications can be leverages to learn about inclusiness ? How vulnerable people like elders, people with difference are treated ? Do and how non-disabled people interact with disabled people in communities ? In person ? By postal or virtual way like cellphones, internet or other ways ? 
+        One of the most simplistic instrument to measure the level of INCLUSION is to observe and question about how things are happening there in terms of social connections and interactions between people in the area. What kind of interactions are there between people in the community ? Good ? Bad ? Mini ? What are the reasons ? Why and how interactions and communications can be leverages to learn about inclusiveness ? How vulnerable people like elders, people with difference are treated ? Do and how non-disabled people interact with disabled people in communities ? In person ? By postal or virtual way like cellphones, internet or other ways ? 
         <br>
         <b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">2-B. Answers can lead to substancial informations about inclusion</b>
         <br>
@@ -6585,6 +6585,7 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
 
