--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 0.5px 0.5rem 0 rgba(43, 93, 174, 0.893);
+  box-shadow: 0 2px 0.45rem 2px rgba(49, 107, 199, 0.893);
 }
 
         .Photography-content a {
@@ -211,7 +211,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 0.5px 0.5rem 0 rgba(43, 93, 174, 0.893);
+  box-shadow: 0 2px 0.45rem 2px rgba(49, 107, 199, 0.893);
    }
 
         .Sport-content a {
@@ -285,7 +285,7 @@
   height: 155px;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 0.5px 0.5rem 0 rgba(43, 93, 174, 0.893);
+  box-shadow: 0 2px 0.45rem 2px rgba(49, 107, 199, 0.893);
    }
 
         .Education-content a {
@@ -359,7 +359,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0 0.5px 0.5rem 0 rgba(43, 93, 174, 0.893);
+  box-shadow: 0 2px 0.45rem 2px rgba(49, 107, 199, 0.893);
     }
 
         .Promoter-content a {
@@ -433,7 +433,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0 0.5px 0.5rem 0 rgba(43, 93, 174, 0.893);
+  box-shadow: 0 2px 0.45rem 2px rgba(49, 107, 199, 0.893);
  }
 
         .Contact-content a {
@@ -508,7 +508,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 0.5px 0.5rem 0 rgba(43, 93, 174, 0.893);
+  box-shadow: 0 2px 0.45rem 2px rgba(49, 107, 199, 0.893);
    } 
 
         .Community-content a {
@@ -584,7 +584,7 @@
   justify-content: center;
   align-items: center;
   margin-left: 45px;
-  box-shadow: 0 0.5px 0.5rem 0 rgba(43, 93, 174, 0.893);
+  box-shadow: 0 2px 0.45rem 2px rgba(49, 107, 199, 0.893);
    }
 
         .TikiYiki-content a {
@@ -658,7 +658,7 @@
   height: 158px;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 0.5px 0.5rem 0 rgba(43, 93, 174, 0.893);
+  box-shadow: 0 2px 0.45rem 2px rgba(49, 107, 199, 0.893);
   }
 
         .Disability-content a {
@@ -3858,7 +3858,7 @@ background: #717171;
             width: 84%;
             background-color: #ffffffec;
             color: #000;
-            margin-top: 2.05rem;
+            margin-top: 2rem;
             border-bottom-right-radius: 0.5rem;
             border-bottom-left-radius: 0.5rem;
             box-shadow: 0 0 0.15rem 0 rgb(36, 135, 206);
@@ -6585,6 +6585,7 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
 
