--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
         .wrapper {
             display: flex;
             position: relative;
-            background: rgb(255, 54, 9);
+            background: transparent;
             width: 98%;
             height: 72px;
             flex-wrap: wrap;
@@ -1039,7 +1039,7 @@
         .cover1 {
             display: flex;
             position: relative;
-            width: 80%;
+            width: 78%;
             height: 79px;
             background: rgb(107, 155, 244);
             justify-content: center;
@@ -6585,5 +6585,6 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
