--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         .top-container {
             display: flex;
             position: relative;
-            background: rgb(107, 155, 244);
+            background: rgb(123, 167, 247);
             width: 100%;
             height: 78px;
             justify-content: center;
@@ -123,9 +123,9 @@
 
         .navbar:hover .Photography:hover .dropbtn {
             transition: 0.35s ease;
-            color: yellow;
+            color: #000;
             cursor: pointer;
-            background: rgb(107, 155, 244);
+            background: rgb(123, 167, 247);
         }
 
  .Photography-content {
@@ -196,9 +196,9 @@
 
         .navbar:hover .Sport:hover .dropbtn {
             transition: 0.35s ease;
-            color: yellow;
+            color: #000;
             cursor: pointer;
-            background: rgb(107, 155, 244);
+            background: rgb(123, 167, 247);
         }
 
         .Sport-content {
@@ -270,9 +270,9 @@
 
         .navbar:hover .Education:hover .dropbtn {
             transition: 0.35s ease;
-            color: yellow;
+            color: #000;
             cursor: pointer;
-            background: rgb(107, 155, 244);
+            background: rgb(123, 167, 247);
                 }
 
         .Education-content {
@@ -344,9 +344,9 @@
 
         .navbar:hover .Promoter:hover .dropbtn {
             transition: 0.35s ease;
-            color: yellow;
+            color: #000;
             cursor: pointer;
-            background: rgb(107, 155, 244);
+            background: rgb(123, 167, 247);
         }
 
         .Promoter-content {
@@ -354,7 +354,7 @@
   position: absolute;
   background: #fff;
   padding: 1px;
-  width: 75px;
+  width: 176px;
   height: 55px;
   justify-content: center;
   align-items: center;
@@ -381,7 +381,7 @@
         }
 
         .Promoter:hover .Promoter-content:hover a:hover{
-            width: 121px;
+            width: 115px;
             height: 45px;
             text-align: center;
             background-color: rgba(42, 53, 140, 0.68);
@@ -418,9 +418,9 @@
 
         .navbar:hover .Contact:hover .dropbtn {
             transition: 0.35s ease;
-            color: yellow;
+            color: #000;
             cursor: pointer;
-            background: rgb(107, 155, 244);
+            background: rgb(123, 167, 247);
         }
 
         .Contact-content {
@@ -428,7 +428,7 @@
   position: absolute;
   background: #fff;
   padding: 1px;
-  width: 75px;
+  width: 125px;
   height: 55px;
   justify-content: center;
   align-items: center;
@@ -493,9 +493,9 @@
 
         .navbar:hover .Community:hover .dropbtn {
             transition: 0.35s ease;
-            color: yellow;
+            color: #000;
             cursor: pointer;
-            background: rgb(107, 155, 244);
+            background: rgb(123, 167, 247);
         }
 
         .Community-content {
@@ -568,9 +568,9 @@
 
         .navbar:hover .TikiYiki:hover .dropbtn {
             transition: 0.35s ease;
-            color: yellow;
+            color: #000;
             cursor: pointer;
-            background: rgb(107, 155, 244);
+            background: rgb(123, 167, 247);
         }
 
         .TikiYiki-content {
@@ -643,9 +643,9 @@
 
         .navbar:hover .Disability:hover .dropbtn {
             transition: 0.35s ease;
-            color: yellow;
+            color: #000;
             cursor: pointer;
-            background: rgb(107, 155, 244);
+            background: rgb(123, 167, 247);
         }
 
         .Disability-content {
@@ -1030,7 +1030,7 @@
             position: relative;
             width: 20%;
             height: 79px;
-            background: rgb(107, 155, 244);
+            background: rgb(123, 167, 247);
             justify-content: center;
             align-items: center;
             margin-left: -1.31%; 
@@ -1041,7 +1041,7 @@
             position: relative;
             width: 78%;
             height: 79px;
-            background: rgb(107, 155, 244);
+            background: rgb(123, 167, 247);
             justify-content: center;
             align-items: center;
             margin-left: 7.5%; 
@@ -6585,6 +6585,7 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
 
