--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 2px 0.45rem 2px rgba(49, 107, 199, 0.893);
+  box-shadow: 0 4px 0.5rem 0.5px rgb(36, 96, 194);
 }
 
         .Photography-content a {
@@ -211,7 +211,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 2px 0.45rem 2px rgba(49, 107, 199, 0.893);
+  box-shadow: 0 4px 0.5rem 0.5px rgb(36, 96, 194);
    }
 
         .Sport-content a {
@@ -285,7 +285,7 @@
   height: 155px;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 2px 0.45rem 2px rgba(49, 107, 199, 0.893);
+  box-shadow: 0 4px 0.5rem 0.5px rgb(36, 96, 194);
    }
 
         .Education-content a {
@@ -359,7 +359,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0 2px 0.45rem 2px rgba(49, 107, 199, 0.893);
+  box-shadow: 0 4px 0.5rem 0.5px rgb(36, 96, 194);
     }
 
         .Promoter-content a {
@@ -433,7 +433,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0 2px 0.45rem 2px rgba(49, 107, 199, 0.893);
+  box-shadow: 0 4px 0.5rem 0.5px rgb(36, 96, 194);
  }
 
         .Contact-content a {
@@ -508,7 +508,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 2px 0.45rem 2px rgba(49, 107, 199, 0.893);
+  box-shadow: 0 4px 0.5rem 0.5px rgb(36, 96, 194);
    } 
 
         .Community-content a {
@@ -584,7 +584,7 @@
   justify-content: center;
   align-items: center;
   margin-left: 45px;
-  box-shadow: 0 2px 0.45rem 2px rgba(49, 107, 199, 0.893);
+  box-shadow: 0 4px 0.5rem 0.5px rgb(36, 96, 194);
    }
 
         .TikiYiki-content a {
@@ -658,7 +658,7 @@
   height: 158px;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 2px 0.45rem 2px rgba(49, 107, 199, 0.893);
+  box-shadow: 0 4px 0.5rem 0.5px rgb(36, 96, 194);
   }
 
         .Disability-content a {
@@ -936,7 +936,7 @@
         .wrapper {
             display: flex;
             position: relative;
-            background: transparent;
+            background: #f6f6f6;
             width: 98%;
             height: 72px;
             flex-wrap: wrap;
@@ -953,7 +953,7 @@
             font-family: 'Barlow Condensed', sans-serif;
             font-size: 25px;
             color: yellow;
-            border-top: 4px solid #ff0;
+            border-top: 4px solid orangered;
             border-radius: 13px;
             width: 65%;
             height: 30px;
@@ -987,7 +987,7 @@
             font-family: 'Barlow Condensed', sans-serif;
             color: yellow;
             font-size: 25px;
-            border-bottom: 4px solid yellow;
+            border-bottom: 4px solid orangered;
             border-radius: 13px;
             margin-top: 4px;
             margin-left: -4.5px;
@@ -2709,13 +2709,13 @@ height: auto;
 
 .Burki-pics0{
     display: grid;
-    grid-template-columns: 0.5fr 1fr;
+    grid-template-columns: 0.25fr 1.75fr;
     column-gap: 0.1rem;
     padding: 10px;
     color: rgba(105, 105, 105, 0.751);
     font-family: 'Kanit';
     background: rgba(255, 255, 255, 0.984);
-    justify-content: center;
+    justify-content: space-between;
     justify-items: center;
     text-align: left;
     width: 85.5%;
@@ -2824,6 +2824,10 @@ height: auto;
     padding: 15px;
     border-right: 0.11rem solid rgba(221, 221, 221, 0.867);
     border-left: 0.11rem solid rgba(221, 221, 221, 0.867);
+    font-size: 13px; 
+    font-family: 'Kanit'; 
+    color:rgb(81, 81, 81); 
+    line-height: 19px;
 }
 
 .B{
@@ -2857,8 +2861,8 @@ height: auto;
 
 .Bu{
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    justify-content: center;
+    grid-template-rows: 0.5fr 0.5fr 0.5fr;
+    justify-content: space-between;
     justify-items: center;
     row-gap: 0.5rem;
     position: sticky;
@@ -5091,7 +5095,7 @@ function showSlides(n) {
     <h2> 1. Disabilities And Inclusion</h2> 
     <p> 
         <br>
-        <p style="font-size: 12px; font-family: 'helvetica'; color:rgb(0, 140, 255); line-height: 16px;">
+        <p style="font-size: 12px; font-family: 'georgia'; color: rgb(81, 81, 81); line-height: 16px;">
              A. [Definition] According to the <a href="https://languages.oup.com/" target="_blank"> Oxford Languages</a>, inclusion is the practice or policy of providing equal access to opportunities and resources for people who might otherwise be excluded or marginalized, such as those who have physical or intellectual disabilities and members of other minority groups.    
                 <br>
                 <br>
@@ -6585,6 +6589,7 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
 
